Fix spacing

--- a/frontend/lyric-sync-app/src/pages/HandwritingPage/HandwritingPage.scss
+++ b/frontend/lyric-sync-app/src/pages/HandwritingPage/HandwritingPage.scss
@@ -23,15 +23,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-
-      }
-      .buttons-box {
-        margin-top: auto;
-        display: flex;
-        justify-content: center;
-        gap: 16px;
-        margin-bottom: 48px;
-        align-items: center;
       }
     }
   }
